overflow fix

--- a/css/comics.css
+++ b/css/comics.css
@@ -23,7 +23,8 @@ html{
 	    height:100%;
 }
 #centro{
-	width:1092px;
+	/*width:1092px;*/
+	width:100%;
 	height:543px;
 	margin:auto 50%;
 	top:50%;
