--- a/css/juegos.css
+++ b/css/juegos.css
@@ -47,7 +47,8 @@ html{
 }
 
 #centro{
-	width:1180px;
+	/*width:1180px;*/
+	width:100%;
 	height:533px;
 	margin:auto 50%;
 	top:50%;
